--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,300 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+#nav-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 70%;
+  padding: 2rem;
+}
+
+#navs a {
+  margin: 1rem;
+  color: rgb(136, 136, 136);
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  border: 1px solid rgba(190, 188, 188, 0.644);
+}
+
+.main {
+  width: 70%;
+  padding: 0 2rem;
+}
+
+.card {
+  display: flex;
+  border: 1px solid rgba(167, 165, 165, 0.644);
+  flex-direction: column;
+  margin: 4%;
+  box-shadow: 0px 2px 2px rgba(139, 139, 139, 0.644);
+  padding: 5% 2%;
+}
+
+.card-heading {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-heading h3 {
+  color: rgb(90, 89, 89);
+}
+.card-heading span {
+  color: rgb(126, 126, 126);
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  background-color: rgb(65, 62, 62);
+  color: white;
+  width: 40%;
+  height: 38px;
+  border: none;
+}
+.buttons button, #button-detail {
+  border-radius: 10px/20%;
+}
+
+#button-detail {
+  width: 95%;
+  height: 30px;
+  margin-top: 2%;
+}
+
+#map {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(206, 206, 206);
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+
+#content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+}
+
+#time {
+  color: rgb(70, 187, 138);
+}
+
+.zoom {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+}
+#in {
+  bottom: 25px;
+  right: 5px;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid gray;
+  color: rgb(112, 108, 108);
+  font-size: 20px;
+}
+
+#out {
+  bottom: 5px;
+  right: 5px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(112, 108, 108);
+  font-size: 20px;
+}
+
+h1, h3 {
+  font-weight: normal;
+}
+h1 {
+  color: rgb(87, 86, 86);
+}
+
+#address, button {
+  cursor: pointer;
+}
+
+#phone-icon {
+  display: inline-block;
+  vertical-align: top;
+}
+.phone p {
+  color: rgb(255, 123, 0);
+}
+
+.phone {
+  margin-bottom: 2%;
+}
+
+#overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  /* top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0; */
+  background-color: rgba(172, 172, 172, 0.472);
+}
+
+#truck-info {
+  background-color: white;
+  height: 90%;
+  width: 90%;
+  position: relative;
+}
+#info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 2%;
+}
+#no-img {
+  width: 50%;
+}
+
+#details {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+.times {
+  display: flex;
+  justify-content: space-between;
+  width: fit-content;
+  text-align: left;
+}
+ol li {
+  list-style-type: none;
+}
+ol:first-child {
+  margin-right: 4vw;
+}
+#close {
+  position: absolute;
+  right: 10px;
+  color: gray;
+  cursor: pointer;
+}
+
+p {
+  margin: 2% 0;
+  text-align: left;
+}
+
+#car-direction {
+  cursor: pointer;
+}
+
+#mobile-header {
+  display: none;
+}
+
+footer {
+  display: none;
+}
+
+@media (max-width: 479px) {
+  #content {
+    flex-direction: column;
+    height: 94%;
+    overflow-y: scroll;
+  }
+  body, .App {
+    height: 100vh;
+  }
+  .main {
+    width: 100%;
+    margin-top: 2vh;
+    height: 100%;
+    padding: 0;
+    overflow: hidden;
+  }
+  #nav-header {
+    display: none;
+  }
+  #mobile-header {
+    display: initial;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(51, 49, 49);
+    padding: 0.5rem;
+  }
+  #mobile-tab {
+    /* width: 100px; */
+  }
+  .block {
+    display: block;
+    width: 24px;
+    background-color: rgb(251, 251, 251);
+    height: 3px;
+    margin: 4px 0;
+  }
+  .main h1 {
+    display: none;
+  }
+
+  footer {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-top: 1px solid black;
+  }
+  footer a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    background-color: white;
+    color: orange;
+    height: 5vh;
+    text-decoration: none;
+  }
+  .selected {
+    background-color: orange;
+    color: white;
+  }
+
+  #map.hide {
+    display: none;
+  }
+
+  #map.show {
+    display: inherit;
+  }
+
+  .container {
+    border: none;
+    overflow: initial;
+  }
 }
