--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,7 @@ h1 {
   height: 90%;
   width: 90%;
   position: relative;
+  overflow: scroll;
 }
 #info {
   display: flex;
@@ -203,12 +204,17 @@ h1 {
   justify-content: space-between;
   width: fit-content;
   text-align: left;
+  width: 100%;
 }
 ol li {
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
 }
-ol:first-child {
-  margin-right: 4vw;
+ol {
+  width: 80%;
 }
 #close {
   position: absolute;
@@ -233,6 +239,7 @@ p {
 footer {
   display: none;
 }
+
 
 @media (max-width: 479px) {
   #content {
